# junction2024

./: .env  .gitignore  README.md  compose.yaml  package-lock.json  package.json
back/: Makefile  compose.yaml  pyproject.toml
back/api/: Dockerfile  main.py  pyproject.toml  requirements.txt
back/api/src/: db.py  models.py
back/data/outputs/pdf00/: action_items.json  decisions.json  feature_extraction.json  requirements.json
back/data/outputs/pdf01/: action_items.json  decisions.json  feature_extraction.json  requirements.json
back/data/outputs/pdf02/: action_items.json  decisions.json  (+2 more)
back/data/txt/: pdf03.txt  pdf04.txt  pdf05.txt  pdf06.txt  pdf07.txt  pdf12.txt  pdf16.txt  pdf22.txt  pdf23.txt  pdf24.txt  pdf26.txt  pdf27.txt  pdf28.txt  pdf30.txt  pdf32.txt  pdf34.txt  pdf35.txt  pdf36.txt  pdf37.txt  pdf38.txt  pdf39.txt  pdf41.txt  pdf42.txt  pdf43.txt  pdf48.txt  pdf51.txt  pdf52.txt
back/db/: Dockerfile  schema.sql
back/processing/: mistral_analyzer.py  pdf_parser.py  pyproject.toml
back/processing/data/: page.html
back/processing/test/: dummy-db-test.py
back/py/: Dockerfile  llm_analyzer.py  mistral_analyzer.py  pdf_parser.py  pdf_scrapper.py  pyproject.toml
back/py/test/: fill-db-test.py
front/: Dockerfile  package-lock.json  package.json
front/.svelte-kit/: ambient.d.ts
front/mail_backend/: package-lock.json  package.json  server.js
front/src/: config.js
front/src/routes/: +layout.svelte  +page.server.js  +page.svelte  Ball.svelte  Feature.svelte  Header.svelte  MovingElement.svelte  create-mockup-db.js  features.db
(+60 files in other folders)
