[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["Marc Franquesa <git@marcfranquesa.com>"]
readme = "README.md"

# package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

