[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["Marc Franquesa <git@marcfranquesa.com>"]
readme = "README.md"

# package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.24.13"
deep-translator = "^1.11.4"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
webdriver-manager = "^4.0.2"
selenium = "^4.26.1"
tqdm = "^4.67.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

